airflow/grafana.yaml
# ===============================
# Grafana Deployment & Service & Ingress
# ===============================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: platform
spec:
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:10.1.2
          ports:
            - containerPort: 3000
          volumeMounts:
          - name: shared
            mountPath: /var/lib/grafana
            subPath: grafana
      volumes:
        - name: shared
          persistentVolumeClaim:
            claimName: shared-pvc


---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: platform
spec:
  type: NodePort 
  selector:
    app: grafana
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 32000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: platform
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    nginx.ingress.kubernetes.io/whitelist-source-range: |
      173.245.48.0/20,
      103.21.244.0/22,
      103.22.200.0/22,
      103.31.4.0/22,
      141.101.64.0/18,
      108.162.192.0/18,
      190.93.240.0/20,
      188.114.96.0/20,
      197.234.240.0/22,
      198.41.128.0/17,
      162.158.0.0/15,
      104.16.0.0/13,
      104.24.0.0/14,
      172.64.0.0/13,
      131.0.72.0/22
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - grafana.gokuladethya.uk
      secretName: grafana-tls
  rules:
    - host: grafana.gokuladethya.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
