airflow/ingres.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow-ingress
  namespace: platform
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/configuration-snippet: |
      # Restrict MLflow to GET-only
      if ($request_method !~ ^(GET|HEAD|OPTIONS)$ ) { return 405; }
spec:
  tls:
    - hosts:
        - mlflow.gokuladethya.uk
      secretName: mlflow-tls
  rules:
    - host: mlflow.gokuladethya.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mlflow
                port:
                  number: 5000
